--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
       </div>
 
-      <button onclick="clickEvent()" type="button">Calcular</button>
+      <button type="button">Calcular</button>
     </div>
   </body>
   <script src="./script.js"></script>
