--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
         </div>
       </div>
 
+      <div class="load">
+        <div class="loader"></div>
+      </div>
+
       <button type="button">Calcular</button>
     </div>
   </body>
