add loading animation

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
 
       <div class="load">
-        <div class="loader"></div>
+        <div class="loader" class="display"></div>
       </div>
 
       <button type="button">Calcular</button>
