--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Caculadora do Pitágoras</title>
 
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/3626/3626508.png" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <h1>CALCULADORA DO TEOREMA DE PITÁGORAS</h1>
